--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-share": "^4.1.0",
     "validator": "^13.0.0"
   },
   "scripts": {
